--- a/css/styles.css
+++ b/css/styles.css
@@ -8,28 +8,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* Helpers */
+
 body {
+    font-family: 'Open Sans', sans-serif;
     background: #D3CCE3;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     ;
 }
-html {
-    font-family: 'Open Sans', sans-serif;
-}
 .row {
     display: flex;
     flex-wrap: wrap;
 }
-.container {
-    width: 80%;
-    margin: auto;
-    background: #ECE9E6;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
 
-}
 header {
     position: sticky;
     width: auto;
@@ -63,46 +55,7 @@ nav li a:hover {
     color:white;
 }
 
-/*  SLIDER  */
- .slider {
-    width: 60%;
-    margin: auto;
-    overflow: hidden;
-    margin: 30px auto;
-    
-}
-.slider ul {
-    display: flex;
-    padding: 0;
-    width: 400%;
-    animation: cambio 20s infinite alternate;
-}
-.slider ul:hover{
-    animation-play-state: paused;
-    cursor: pointer;
-}
-.slider li {
-    width: 100%;
-    list-style: none;
-}
-.slider img {
-    width: 100%;
-    height: 350px;
-    margin: auto;
-}
-@keyframes cambio {
-    0%{margin-left: 0%;}
-    10%{margin-left: 0%;}
 
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
 
 /* -------------------INFO -------------- */
 .info {
@@ -125,9 +78,9 @@ nav li a:hover {
 .info-text {
     width: 50%;
 }
-.info-text h3 {
+.info-text h2 {
     text-align: center;
-    margin: 10px;
+   
 }
 .info-text p {
     margin: 20px;
@@ -171,8 +124,8 @@ nav li a:hover {
     padding: 10px;
 }
 .product-1 img {    
-    width: 250px;
-    height: 200px;
+    width: 100%;
+    height: 60%;
            
 }
 .product-img figure {
@@ -180,7 +133,6 @@ nav li a:hover {
         width: 100%;
        justify-content: center;     
 }    
-
 
 /* GALERY IMAGES */
 .galery {
