--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,48 +1,34 @@
- /* /* @media only screen and (min-width: 400px) and (max-width: 700px) {
+
+@media (min-width:576px){  
+      
+     nav ul {
+          display: flex;
+          justify-content: space-evenly;         
+     }
+          
     
-[class*=col-]{
-    padding:10px;
 }
- 
-    .col-sm-1 {width: 8.33%;}
-    .col-sm-2 {width: 16.66%;}
-    .col-sm-3 {width: 25%;}
-    .col-sm-4 {width: 33.33%;}
-    .col-sm-5 {width: 41.66%;}
-    .col-sm-6 {width: 50%;}
-    .col-sm-7 {width: 58.33%;}
-    .col-sm-8 {width: 66.66%;}
-    .col-sm-9 {width: 75%;}
-    .col-sm-10 {width: 83.33%;}
-    .col-sm-11 {width: 91.66%;}
-    .col-sm-12 {width: 100%;}
-  
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
- 
-    nav {       
-        display: flex;
-        flex-direction: column;
+/* Tablets */
+@media (min-width:768px){
+        nav {
+             justify-content: space-between;
         }
+            
 
-.nav_options {
-    margin: 5px;
 }
 
+/* Pc Portatiles */
+@media (min-width:992px){
+     
+     .order-section{
+          order:2;          
+     }
+     .product-info{
+       order:1;
+     }
+} 
 
-.slider  {
-    width: 100%;
-    height: 350px;
+/* Pc Grandes */
+@media (min-width:1200px){
+     
 }
-
-
-.products h1 {
-    text-align: center;
-}
-.card-img img{
-    margin: auto;
-    width: 100%;
-}   */
