--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,7 +3,8 @@
      nav ul {
           display: flex;
           justify-content: space-evenly;         
-     }              
+     }    
+       
     
 }
 /* Tablets */
@@ -11,6 +12,60 @@
         .logo p, .nav_options ul li {
           margin-top: 12px;
      }
+     .products h2::before {
+          content:'';
+          display: inline-block;
+          width: 150px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-right: 15px;
+         }
+         .products h2::after {
+          content:'';
+          display: inline-block;
+          width: 150px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-left: 15px;
+         }
+     .galery h3::before {
+          content:'';
+          display: inline-block;
+          width: 150px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-right: 15px;
+        }
+        .galery h3::after {
+          content:'';
+          display: inline-block;
+          width: 150px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-left: 15px;
+        }
+     .benefits h2::before {
+          content:'';
+          display: inline-block;
+          width: 60px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-right: 10px;
+        }
+        .benefits h2::after {
+          content:'';
+          display: inline-block;
+          width: 60px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-left: 10px;
+        }
 }
 
 /* Pc Portatiles */
@@ -22,6 +77,24 @@
      .product-info{
        order:1;
      }
+     .benefits h2::before {
+          content:'';
+          display: inline-block;
+          width: 100px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-right: 10px;
+        }
+        .benefits h2::after {
+          content:'';
+          display: inline-block;
+          width: 100px;
+          height: 2px;
+          background: rgb(194, 169, 169);
+          margin-bottom: 10px;
+          margin-left: 10px;
+        }
 } 
 
 /* Pc Grandes */
