--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,10 @@
   content:'';
   display: block;
   margin:  auto;
-  margin-top: 10px;
-  width: 100px;
-  height: 3px;
-  background: black;
+  margin-top: 5px;
+  width: 150px;
+  height: 2px;
+  background: rgb(143, 108, 108);
   margin-bottom: 20px;
 }
   .row {
@@ -99,7 +99,7 @@
   
   /* -------------------PRODUCTS -------------- */
   .products {
-    padding: 10px;
+    padding: 10px 0;
     background-color: rgb(226, 202, 202);
     /* border: 1px solid; */
   }
@@ -166,6 +166,7 @@
   .products h2 {    
     font-family: var(--josefin);
   }
+ 
   .product-1 {
     margin: 20px 0;
     padding: 10px;
@@ -223,6 +224,9 @@
     text-align: center;
     font-family: var(--josefin);
   }
+ 
+  
+
   /* VENTAJAS */
   .benefits {
     background-color: rgb(226, 202, 202);
@@ -230,10 +234,10 @@
     padding: 20px;
   }
   .benefits h2 {
-    text-align: center;
     padding: 10px;
     font-family: var(--josefin);
   }
+  
   .benefits-items {
     margin: 30px;
     display: flex;
